=== master

* Make Dataset#execute* private methods respect explicit servers option, fixing Dataset#paged_each in the postgres adapter when sharding (jeremyevans) (#1632)

* Handle instances of subclasses of core classes when wrapping objects in the pg_json extension (jeremyevans) (#1631)

* Support :ansi Database option in the tinytds adapter (kenaniah) (#1629)

* Support cross-database and linked servers when parsing schema on Microsoft SQL Server (kenaniah) (#1629)

* Add insert_conflict plugin for automatically handling unique constraint conflicts when saving new model instances on PostgreSQL 9.5+ and SQLite 3.24.0+ (jeremyevans)

* Avoid errors when parsing schema in the mock sqlite adapter (jeremyevans)

* Avoid possible thread-safety issue in the timezones support (jeremyevans)

* Handle offsets when typecasting an array or hash to datetime when Sequel.datetime_class = Time (jeremyevans)

* Support Sequel.datetime_class = Time when using the named_timezones extension (jeremyevans)

=== 5.22.0 (2019-07-01)

* Fix Dataset#multi_insert and #import with return: :primary_key on MSSQL when the dataset has a row_proc (jeremyevans) (#1627)

* Support Dataset#with :materialized option on PostgreSQL 12 for [NOT] MATERIALIZED (jeremyevans)

* Make Database#primary_key_sequence work on tables without serial sequences on PostgreSQL 12 (jeremyevans)

* Support ruby 2.7+ startless ranges in the pg_range extension (jeremyevans)

* Support ruby 2.7+ startless, endless ranges in filters, using an always true condition for them (jeremyevans)

* Support ruby 2.7+ startless ranges in filters, using just a <= or < operator for them (jeremyevans)

=== 5.21.0 (2019-06-01)

* Recognize additional DatabaseLockTimeout errors in mysql and mysql2 adapters (jeremyevans)

* Disallow eager_graph of ancestors and descendants associations when using the rcte_tree plugin (jeremyevans)

* Make jdbc/mysql adapter work when using JRuby with Java 11 (jeremyevans)
